# sage-voice-client

./: .env.example  .gitignore  README.md  config.py  main.py  openclaw-proxy.mjs  pyproject.toml  requirements.txt
docs/: setup.md
services/: audio.py  openclaw_api.py  stt.py  tts.py  wakeword.py
tests/: conftest.py  test_audio.py  test_config.py  test_openclaw_api.py  test_stt.py  test_tts.py  test_wakeword.py
