[project]
name = "sage-voice-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "elevenlabs>=1.5.0",
    "faster-whisper>=1.0.0",
    "websocket-client>=1.8.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "pvporcupine>=3.0.0",
    "pydub>=0.25.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "respx>=0.21.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
